ASD LL(1) - ANTLR/G3/G3_factorizacion/G3_Factorizacion.g4
grammar G3_Factorizacion;

prog: 	stat+ ;
stat:	s NEWLINE
    |	NEWLINE
    ;

s:  (a b c sprima )
    ;
a:  (|DOS b c)
    ;
b:  (|c TRES)
    ;
c:  (|CUATRO b)
    ;
sprima: (|UNO sprima)
    ;

    
UNO : 'uno';
DOS : 'dos';
TRES : 'tres';
CUATRO : 'cuatro';
NEWLINE:'\r'? '\n' ;
